# SSPM-rust

./: Cargo.toml  README.md  repo.rlpmrepo
.github/workflows/: rust.yml
src/: main.rs
