[package]
name = "rlpm"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
tar = "0.4"
flate2 = "1.0"
zip = "0.6"[package]
name = "rlpm"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.12.22"
zip = "4.3.0"
